demos/workload-identity/bad-deploy.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: demo-bad
  namespace: workload-id-demo
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: http 
  selector:
    app: demo-bad
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gcs-wi-test-bad
  namespace: workload-id-demo
spec:
  selector:
    matchLabels:
      app: demo-bad
  template:
    metadata:
      labels:
        app: demo-bad
    spec:
      containers:
      - env:
        - name: PORT
          value: "8080"
        - name: BUCKET_NAME
          value: ${BUCKET_NAME}
        image: bucksteamy/workload-id-storage-demo:v1.3
        imagePullPolicy: Always
        name: gcs-fuse-workload
        ports:
          - name: http
            containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 50Mi
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
