demos/workload-identity/gcs-wi-test-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: workload-id-demo
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: demo
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo
  name: gcs-wi-test
  namespace: workload-id-demo
spec:
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - env:
        - name: PORT
          value: "8080"
        - name: BUCKET_NAME
          value: gke-application-bucket-4d5610
        image: gcr.io/gke-toolkit-test-00-311520/workload-id-demo-app:latest
        imagePullPolicy: Always
        name: gcs-fuse-workload
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 50Mi
      serviceAccount: workload-id-demo-sa
      serviceAccountName: workload-id-demo-sa
