demos/workload-identity/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: workload-id-demo
  namespace: workload-id-demo
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: good.example.com
    http:
      paths:
      - backend:
          serviceName: demo
          servicePort: 8080
  - host: bad.example.com
    http:
      paths:
      - backend:
          serviceName: demo-bad
          servicePort: 8080
